sample SOLID-aware architecture.

--- a/LocationSugesstion/Base.lproj/Main.storyboard
+++ b/LocationSugesstion/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,8 +15,56 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelectionDuringEditing="YES" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Kkt-ho-LH3">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="aJM-Es-mGv">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="65"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="v2e-AL-tOq">
+                                            <rect key="frame" x="8" y="35" width="584" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                            <connections>
+                                                <action selector="textChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="MOs-9w-UD4"/>
+                                            </connections>
+                                        </textField>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstItem="v2e-AL-tOq" firstAttribute="leading" secondItem="aJM-Es-mGv" secondAttribute="leading" constant="8" id="0qa-MI-5Xc"/>
+                                        <constraint firstAttribute="trailing" secondItem="v2e-AL-tOq" secondAttribute="trailing" constant="8" id="417-tq-bYz"/>
+                                        <constraint firstItem="v2e-AL-tOq" firstAttribute="top" secondItem="aJM-Es-mGv" secondAttribute="top" constant="35" id="Rlv-0p-fg2"/>
+                                        <constraint firstAttribute="bottom" secondItem="v2e-AL-tOq" secondAttribute="bottom" id="ZyZ-aX-2BY"/>
+                                        <constraint firstAttribute="centerX" secondItem="v2e-AL-tOq" secondAttribute="centerX" id="wY7-90-QfC"/>
+                                    </constraints>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="HpJ-k2-on0">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HpJ-k2-on0" id="LZU-3x-4uu">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Kkt-ho-LH3" secondAttribute="bottom" id="6WC-9w-gtN"/>
+                            <constraint firstAttribute="centerY" secondItem="Kkt-ho-LH3" secondAttribute="centerY" id="81a-gk-550"/>
+                            <constraint firstAttribute="trailing" secondItem="Kkt-ho-LH3" secondAttribute="trailing" id="LBp-oZ-R2O"/>
+                            <constraint firstItem="Kkt-ho-LH3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="a2e-Fm-Yko"/>
+                            <constraint firstAttribute="centerX" secondItem="Kkt-ho-LH3" secondAttribute="centerX" id="c5g-8n-o0f"/>
+                            <constraint firstItem="Kkt-ho-LH3" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="cmc-Ec-LDa"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="Kkt-ho-LH3" id="8ix-DH-Txf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
